# cbs_mockup

./: .gitignore  BUILD_AND_RUN.md  PROJECT_SUMMARY.md  README.md  docker-compose.yml  install manual.md  logs.md  monthly cost.xlsx  pom.xml  pyproject.toml
.github/workflows/: refresh-monthly-cost.yml
cbs-account-service/: pom.xml
cbs-account-service/src/main/resources/: application.yml
cbs-api-gateway/: pom.xml
cbs-api-gateway/src/main/resources/: application.yml
cbs-core/: pom.xml
cbs-frontend/: .env.development  .env.production  package-lock.json  package.json  pom.xml
cbs-frontend/public/: index.html
cbs-frontend/src/: App.css  App.js
cbs-frontend/src/components/: AccountManagement.js  Dashboard.js  Navigation.js  PaymentCenter.js
cbs-middleware/: pom.xml
cbs-payment-service/: Dockerfile  pom.xml
cbs-payment-service/src/main/resources/: application.yml
scripts/: generate_monthly_cost_xlsx.py
src/cbs/: __init__.py  config.py  database.py  main.py
src/cbs/models/: __init__.py  account.py  card.py  customer.py  ledger.py  lending.py  merchant.py  payment.py
src/cbs/routers/: accounts.py  cards.py  customers.py  lending.py  merchants.py  payments.py
src/cbs/schemas/: account.py  card.py  customer.py  lending.py  merchant.py  payment.py
src/cbs/services/: account_service.py  card_service.py  ledger_service.py  lending_service.py  merchant_service.py  payment_service.py
src/cbs/utils/: currency.py  iban.py
tests/: conftest.py  test_accounts.py  test_cards.py  test_customers.py  test_lending.py  test_merchants.py  test_payments.py
(+21 files in other folders)
